--- a/theme/scss/_custom.scss
+++ b/theme/scss/_custom.scss
@@ -1,4 +1,4 @@
-$red: #FF3B1D;
+$red: #EA5455;
 $gray: #4C4C4E;
 $blue: #3E78B2;
 
@@ -39,6 +39,37 @@ h3 {
 
 .entry-title {
     display: none;
+}
+
+section {
+    &.contact {
+        background: url("/wp-content/uploads/2019/02/cover-image-shorter.jpg") center no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        background-color: darken($gray, 10%);
+        background-blend-mode: multiply;
+
+        h1 {
+            color: #fff;
+        }
+
+        .section-title {
+            border-bottom: 1px dotted #fff;
+        }
+
+        .wpforms-submit {
+            border: 2px solid #fff !important;
+            color: #fff !important;
+        }
+
+        .wpforms-submit::after {
+            color: #fff !important;
+        }
+
+        .button:hover, .wpforms-submit:hover {
+            border: 2px solid $red !important;
+        }
+    }
 }
 
 header {
@@ -84,61 +115,63 @@ header {
     }
 }
 
-.button {
-    text-transform: uppercase;
-    min-width: 150px;
-    max-width: 200px;
-    text-align: center;
-    display: block;
-    padding: .8em 1.8em;
-    background: none;
-    vertical-align: middle;
-    position: relative;
-    z-index: 1;
-    letter-spacing: 2px;
-    font-weight: bold;
+.button, .wpforms-submit {
+    text-transform: uppercase !important;
+    min-width: 150px !important;
+    max-width: 200px !important;
+    text-align: center !important;
+    display: block !important;
+    padding: .8em 1.8em !important;
+    background: none !important;
+    vertical-align: middle !important;
+    position: relative !important;
+    z-index: 1 !important;
+    letter-spacing: 2px !important;
+    font-weight: bold !important;
     border: 2px solid $red;
-    cursor: pointer;
-    font-size: .9rem;
+    cursor: pointer !important;
+    font-size: .9rem !important;
 
     @media (max-width: $breakpoint-medium) {
-        margin: auto;
+        margin: auto !important;
     }
 }
 
-.button::after {
-    content: "";
-    background-color: transparent;
-    position: absolute;
-    top: -20px;
-    left: -20px;
-    right: -20px;
-    bottom: -20px;
-    opacity: 0;
+.button::after, .wpforms-submit::after {
+    content: "" !important;
+    background-color: transparent !important;
+    position: absolute !important;
+    top: -20px !important;
+    left: -20px !important;
+    right: -20px !important;
+    bottom: -20px !important;
+    opacity: 0 !important;
     color: $red;
-    z-index: -1;
+    z-index: -1 !important;
 }
 
-.button:hover::after {
-    opacity: 1;
-    background-color: $red;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+.button:hover::after, .wpforms-submit:hover::after {
+    opacity: 1 !important;
+    background-color: $red !important;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
 }
 
 .button,
-.button:after {
-    -webkit-transition: all 0.5s ease-out;
-    -moz-transition: all 0.5s ease-out;
-    -o-transition: all 0.5s ease-out;
-    transition: all 0.5s ease-out;
+.button:after,
+.wpforms-submit,
+.wpforms-submit:after {
+    -webkit-transition: all 0.5s ease-out !important;
+    -moz-transition: all 0.5s ease-out !important;
+    -o-transition: all 0.5s ease-out !important;
+    transition: all 0.5s ease-out !important;
 }
 
-.button:hover {
+.button:hover, .wpforms-submit:hover {
     border: 2px solid $red;
-    color: #fff;
+    color: #fff !important;
 }
 
 .container {
@@ -155,7 +188,22 @@ header {
     color: #fff;
     width: 100%;
     height: 100vh;
-    background: $blue;
+    background: url("/wp-content/uploads/2019/02/cover-image-shorter.jpg") center no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+
+    /*     background-color: $gray;
+        background-blend-mode: multiply; */
+}
+
+.scroll-down {
+    width: 25px;
+    margin: auto;
+    position: absolute;
+    bottom: 25px;
+    right: 0;
+    left: 0;
+    cursor: pointer;
 }
 
 .section-title {
@@ -231,10 +279,35 @@ header {
     }
 }
 
+.form-wrapper {
+    max-width: 500px;
+    margin: auto;
+    padding: 10px 25px;
+    background: #3e78b282;
+}
+
+.contact-field {
+    border: 2px solid lighten($gray, 60%) !important;
+    padding: 0 !important;
+    margin: 20px 0 !important;
+
+    textarea, input {
+        border: none !important;
+        background: lighten($gray, 60%) !important;
+        border-radius: 0 !important;
+    }
+
+    label.wpforms-error {
+        background: $red !important;
+        color: #fff !important;
+        padding: 5px 10px !important;
+    }
+}
+
 .lap-top {
     height: 300px;
     margin-top: 30px;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1270439/Partea.png);
+    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1270439/Partea.png");
     background-size: contain;
     background-position: top center;
     background-repeat: no-repeat;
