--- a/theme/scss/_custom.scss
+++ b/theme/scss/_custom.scss
@@ -70,6 +70,10 @@ section {
             border: 2px solid $red !important;
         }
     }
+
+    &.more-projects {
+        background: lighten($gray, 60%);
+    }
 }
 
 header {
@@ -78,6 +82,13 @@ header {
     background: $gray;
     width: 100%;
     z-index: 100;
+
+    .logo {
+        width: 39px;
+        left: 25px;
+        top: 5px;
+        position: absolute;
+    }
 }
 
 .main-navigation {
@@ -188,7 +199,7 @@ header {
     color: #fff;
     width: 100%;
     height: 100vh;
-    background: url("/wp-content/uploads/2019/02/cover-image-shorter.jpg") center no-repeat;
+    background: url("/wp-content/uploads/2019/02/cover-image-shorter.jpg") top center no-repeat;
     background-size: cover;
     background-attachment: fixed;
 
@@ -212,7 +223,7 @@ header {
     border-bottom: 1px dotted gray;
 }
 
-.featured-work {
+.featured-work, .about-me {
     .wrapper {
         display: flex;
         justify-content: space-between;
@@ -264,18 +275,53 @@ header {
     }
 }
 
+.about-me {
+    .wrapper {
+        .column-1 {
+            width: 30%;
+
+            @media (max-width: $breakpoint-medium) {
+                width: 100%;
+                order: 1;
+            }
+        }
+
+        .column-2 {
+            width: 65%;
+
+            @media (max-width: $breakpoint-medium) {
+                width: 100%;
+                order: 2;
+            }
+        }
+    }
+
+    .featured-image {
+        width: 100%;
+        height: 250px;
+
+        @media (max-width: $breakpoint-medium) {
+            width: 100%;
+        }
+    }
+}
+
 .content {
     margin-bottom: 30px;
 
-    @media (max-width: $breakpoint-medium) {
-        text-align: center;
-        max-width: 600px;
-        margin: auto;
-        margin-bottom: 30px;
-    }
-
     h2 {
         margin-top: 0;
+    }
+}
+
+.featured-work {
+    .content {
+        @media (max-width: $breakpoint-medium) {
+            text-align: center;
+            max-width: 600px;
+            margin: auto;
+            margin-bottom: 30px;
+        }
     }
 }
 
@@ -283,7 +329,7 @@ header {
     max-width: 500px;
     margin: auto;
     padding: 10px 25px;
-    background: #3e78b282;
+    background: rgba($blue, 0.4);
 }
 
 .contact-field {
@@ -304,7 +350,7 @@ header {
     }
 }
 
-.lap-top {
+.featured-image {
     height: 300px;
     margin-top: 30px;
     background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1270439/Partea.png");
@@ -316,11 +362,14 @@ header {
         height: 250px;
         margin-bottom: 20px;
     }
-}
 
-.banner {
-    width: 100%;
-    background: lighten($gray, 60%);
+    &.bio {
+        background-image: url("/wp-content/uploads/2019/02/frankie.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin-top: 0;
+    }
 }
 
 .more-projects {
@@ -329,7 +378,7 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        padding: 20px 0;
+        padding: 0 0 20px 0;
 
         img {
             width: 33%;
