--- a/theme/scss/_custom.scss
+++ b/theme/scss/_custom.scss
@@ -70,10 +70,6 @@ section {
             border: 2px solid $red !important;
         }
     }
-
-    &.more-projects {
-        background: lighten($gray, 60%);
-    }
 }
 
 header {
@@ -82,13 +78,6 @@ header {
     background: $gray;
     width: 100%;
     z-index: 100;
-
-    .logo {
-        width: 39px;
-        left: 25px;
-        top: 5px;
-        position: absolute;
-    }
 }
 
 .main-navigation {
@@ -199,7 +188,7 @@ header {
     color: #fff;
     width: 100%;
     height: 100vh;
-    background: url("/wp-content/uploads/2019/02/cover-image-shorter.jpg") top center no-repeat;
+    background: url("/wp-content/uploads/2019/02/cover-image-shorter.jpg") center no-repeat;
     background-size: cover;
     background-attachment: fixed;
 
@@ -223,7 +212,7 @@ header {
     border-bottom: 1px dotted gray;
 }
 
-.featured-work, .about-me {
+.featured-work {
     .wrapper {
         display: flex;
         justify-content: space-between;
@@ -275,53 +264,18 @@ header {
     }
 }
 
-.about-me {
-    .wrapper {
-        .column-1 {
-            width: 30%;
-
-            @media (max-width: $breakpoint-medium) {
-                width: 100%;
-                order: 1;
-            }
-        }
-
-        .column-2 {
-            width: 65%;
-
-            @media (max-width: $breakpoint-medium) {
-                width: 100%;
-                order: 2;
-            }
-        }
-    }
-
-    .featured-image {
-        width: 100%;
-        height: 250px;
-
-        @media (max-width: $breakpoint-medium) {
-            width: 100%;
-        }
-    }
-}
-
 .content {
     margin-bottom: 30px;
 
+    @media (max-width: $breakpoint-medium) {
+        text-align: center;
+        max-width: 600px;
+        margin: auto;
+        margin-bottom: 30px;
+    }
+
     h2 {
         margin-top: 0;
-    }
-}
-
-.featured-work {
-    .content {
-        @media (max-width: $breakpoint-medium) {
-            text-align: center;
-            max-width: 600px;
-            margin: auto;
-            margin-bottom: 30px;
-        }
     }
 }
 
@@ -329,7 +283,7 @@ header {
     max-width: 500px;
     margin: auto;
     padding: 10px 25px;
-    background: rgba($blue, 0.4);
+    background: #3e78b282;
 }
 
 .contact-field {
@@ -350,7 +304,7 @@ header {
     }
 }
 
-.featured-image {
+.lap-top {
     height: 300px;
     margin-top: 30px;
     background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1270439/Partea.png");
@@ -362,14 +316,11 @@ header {
         height: 250px;
         margin-bottom: 20px;
     }
+}
 
-    &.bio {
-        background-image: url("/wp-content/uploads/2019/02/frankie.jpg");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        margin-top: 0;
-    }
+.banner {
+    width: 100%;
+    background: lighten($gray, 60%);
 }
 
 .more-projects {
@@ -378,7 +329,7 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        padding: 0 0 20px 0;
+        padding: 20px 0;
 
         img {
             width: 33%;
