--- a/theme/scss/_custom.scss
+++ b/theme/scss/_custom.scss
@@ -202,19 +202,62 @@ header {
     background: url("/wp-content/uploads/2019/02/cover-image-shorter.jpg") top center no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    background-color: $gray;
+    background-blend-mode: multiply;
+}
 
-    /*     background-color: $gray;
-        background-blend-mode: multiply; */
+.hero-content {
+    color: #fff;
+    max-width: 700px;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    h1 {
+        color: #fff;
+        margin: 0;
+        font-size: 4.5rem;
+
+        /* text-transform: none; */
+    }
+
+    h2 {
+        color: lighten($blue, 25%);
+        font-size: 2rem;
+        margin-top: -10px;
+    }
+
+    .logo {
+        width: 100px;
+        height: 100px;
+        margin-bottom: 10px;
+    }
 }
 
 .scroll-down {
-    width: 25px;
-    margin: auto;
+    width: 100%;
     position: absolute;
     bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     right: 0;
     left: 0;
     cursor: pointer;
+
+    svg {
+        width: 25px;
+    }
+
+    h3 {
+        color: #fff;
+        margin-bottom: 15px;
+    }
 }
 
 .section-title {
@@ -223,7 +266,7 @@ header {
     border-bottom: 1px dotted gray;
 }
 
-.featured-work, .about-me {
+.featured-work, .about-me, .modal {
     .wrapper {
         display: flex;
         justify-content: space-between;
@@ -244,7 +287,7 @@ header {
         }
 
         .column-1 {
-            width: 40%;
+            width: 45%;
 
             @media (max-width: $breakpoint-medium) {
                 width: 100%;
@@ -270,7 +313,7 @@ header {
         }
 
         &:last-child {
-            margin-bottom: 0;
+            margin-bottom: 20px;
         }
     }
 }
@@ -314,13 +357,14 @@ header {
     }
 }
 
-.featured-work {
+.featured-work, .modal {
     .content {
         @media (max-width: $breakpoint-medium) {
             text-align: center;
             max-width: 600px;
             margin: auto;
             margin-bottom: 30px;
+            margin-top: -40px;
         }
     }
 }
@@ -370,6 +414,20 @@ header {
         background-repeat: no-repeat;
         margin-top: 0;
     }
+
+    &.partea {
+        background-image: url("/wp-content/uploads/2019/02/partea.jpg");
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+
+    &.neche {
+        background-image: url("/wp-content/uploads/2019/02/neche.jpg");
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
 }
 
 .more-projects {
@@ -380,14 +438,133 @@ header {
         align-items: center;
         padding: 0 0 20px 0;
 
-        img {
+        .featured {
             width: 33%;
             height: auto;
             padding: 10px;
+            cursor: pointer;
 
             @media (max-width: $breakpoint-medium) {
                 width: 50%;
             }
         }
+    }
+}
+
+/* Modal */
+$speed: 0.6s;
+$delay: $speed * 0.5;
+$easing: cubic-bezier(0.55, 0, 0.1, 1);
+
+/* Overlay
+only show for tablet and up */
+
+@media only screen and (min-width: 40em) {
+    .modal-overlay {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 5;
+        background-color: rgba($gray, 0.8);
+        opacity: 0;
+        visibility: hidden;
+        backface-visibility: hidden;
+
+        &.active {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+
+/* Modal */
+
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin: 0 auto;
+    background-color: #fff;
+    width: 920px;
+    max-width: 75rem;
+    min-height: 20rem;
+    padding: 1rem;
+    border-radius: 3px;
+    opacity: 0;
+    overflow-y: auto;
+    visibility: hidden;
+    backface-visibility: hidden;
+    transform: scale(1.2);
+    transition: all $speed $easing;
+
+    .close-modal {
+        position: absolute;
+        cursor: pointer;
+        top: 5px;
+        right: 15px;
+        opacity: 0;
+        backface-visibility: hidden;
+        transition: opacity $speed $easing, transform $speed $easing;
+        transition-delay: $delay;
+
+        svg {
+            width: 1.75em;
+            height: 1.75em;
+        }
+    }
+
+    /* close modal */
+
+    .modal-content {
+        width: 100%;
+        opacity: 0;
+        backface-visibility: hidden;
+        transition: opacity $speed $easing;
+        transition-delay: $delay;
+        padding: 20px;
+    }
+
+    /* content */
+
+    &.active {
+        visibility: visible;
+        opacity: 1;
+        transform: scale(1);
+
+        .modal-content {
+            opacity: 1;
+        }
+
+        .close-modal {
+            transform: translateY(10px);
+            opacity: 1;
+        }
+    }
+}
+
+/* Mobile styling */
+
+@media only screen and (max-width: 39.9375em) {
+    .modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        -webkit-overflow-scrolling: touch;
+        border-radius: 0;
+        transform: scale(1.1);
+        padding: 0 !important;
+        z-index: 1000;
+    }
+
+    .close-modal {
+        right: 20px !important;
     }
 }
