--- a/theme/scss/_custom.scss
+++ b/theme/scss/_custom.scss
@@ -471,6 +471,55 @@ header {
         background-position: top center;
         background-repeat: no-repeat;
     }
+
+    &.rad-dads {
+        background-image: url("/wp-content/uploads/2019/03/rad-dads-mock.jpg");
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+
+    &.yarmouth {
+        background-image: url("/wp-content/uploads/2019/03/yarmouth-mock.jpg");
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+
+    &.cambria {
+        background-image: url("/wp-content/uploads/2019/03/cambria-mock.jpg");
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+
+    &.curry {
+        background-image: url("/wp-content/uploads/2019/03/curry-mock.jpg");
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+
+    &.triad {
+        background-image: url("/wp-content/uploads/2019/03/triad-mock.jpg");
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+
+    &.mbta {
+        background-image: url("/wp-content/uploads/2019/03/mbta-mock.jpg");
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+
+    &.mbta {
+        background-image: url("/wp-content/uploads/2019/03/mbta-mock.jpg");
+        background-size: contain;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
 }
 
 .more-projects {
