--- a/theme/scss/_custom.scss
+++ b/theme/scss/_custom.scss
@@ -88,6 +88,22 @@ header {
         left: 25px;
         top: 5px;
         position: absolute;
+
+        @media (max-width: $breakpoint-medium) {
+            position: static;
+            margin: auto;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 70px;
+        }
+
+        svg {
+            @media (max-width: $breakpoint-medium) {
+                height: 40px;
+            }
+        }
     }
 }
 
@@ -99,6 +115,10 @@ header {
     -moz-box-shadow: 0px 10px 23px -1px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 10px 23px -1px rgba(0, 0, 0, 0.25);
 
+    @media (max-width: $breakpoint-medium) {
+        display: block;
+    }
+
     ul {
         list-style: none;
         padding: 0;
@@ -106,8 +126,19 @@ header {
         justify-content: center;
         margin: 0;
 
+        @media (max-width: $breakpoint-medium) {
+            display: block;
+            width: 100%;
+        }
+
         li {
             display: inline-block;
+
+            @media (max-width: $breakpoint-medium) {
+                display: block;
+                width: 100%;
+                text-align: center;
+            }
 
             a {
                 display: block;
