--- a/theme/scss/_custom.scss
+++ b/theme/scss/_custom.scss
@@ -89,9 +89,9 @@ header {
 
     .logo {
         background: $gray;
-        width: 39px;
+        width: 33px;
         left: 25px;
-        top: 5px;
+        top: 7px;
         position: absolute;
 
         @media (max-width: $breakpoint-medium) {
@@ -106,6 +106,9 @@ header {
             justify-content: center;
             align-items: center;
             height: 70px;
+            -webkit-box-shadow: 0px 10px 23px -1px rgba(0, 0, 0, 0.25);
+            -moz-box-shadow: 0px 10px 23px -1px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 10px 23px -1px rgba(0, 0, 0, 0.25);
         }
 
         svg {
@@ -117,9 +120,9 @@ header {
 }
 
 /* Hamburger Styles */
-$height-icon: 20px;
-$width-line: 35px;
-$height-line: 3px;
+$height-icon: 15px;
+$width-line: 28px;
+$height-line: 2px;
 
 $transition-time: 0.4s;
 $rotation: 45deg;
@@ -132,6 +135,10 @@ $translateX: 0;
     display: flex;
     padding-top: 5px;
     padding-bottom: 10px;
+
+    @media (min-width: $breakpoint-medium) {
+        display: none;
+    }
 }
 
 .hamburger-icon {
@@ -163,38 +170,6 @@ $translateX: 0;
 
         &.line-3 {
             top: 100%;
-        }
-    }
-
-    &:hover {
-        .line-1 {
-            transform: translateY($height-line / 2 * -1);
-            -webkit-transform: translateY($height-line / 2 * -1);
-            -moz-transform: translateY($height-line / 2 * -1);
-        }
-
-        .line-3 {
-            transform: translateY($height-line / 2);
-            -webkit-transform: translateY($height-line / 2);
-            -moz-transform: translateY($height-line / 2);
-        }
-    }
-
-    &.active {
-        .line-1 {
-            transform: translateY($translateY) translateX($translateX) rotate($rotation);
-            -webkit-transform: translateY($translateY) translateX($translateX) rotate($rotation);
-            -moz-transform: translateY($translateY) translateX($translateX) rotate($rotation);
-        }
-
-        .line-2 {
-            opacity: 0;
-        }
-
-        .line-3 {
-            transform: translateY($translateY * -1) translateX($translateX) rotate($rotation * -1);
-            -webkit-transform: translateY($translateY * -1) translateX($translateX) rotate($rotation * -1);
-            -moz-transform: translateY($translateY * -1) translateX($translateX) rotate($rotation * -1);
         }
     }
 }
@@ -255,6 +230,12 @@ $translateX: 0;
                 }
             }
         }
+    }
+}
+
+#menu-main-navigation-1 {
+    @media (max-width: $breakpoint-medium) {
+        display: none;
     }
 }
 
@@ -333,7 +314,6 @@ $translateX: 0;
     height: 100vh;
     background: url("/wp-content/uploads/2019/02/cover-image-shorter.jpg") top center no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     background-color: $gray;
     background-blend-mode: multiply;
 }
@@ -354,6 +334,10 @@ $translateX: 0;
         margin: 0;
         font-size: 4.5rem;
 
+        @media (max-width: $breakpoint-small) {
+            font-size: 2.2rem;
+        }
+
         /* text-transform: none; */
     }
 
@@ -361,12 +345,22 @@ $translateX: 0;
         color: lighten($blue, 25%);
         font-size: 2rem;
         margin-top: -10px;
+
+        @media (max-width: $breakpoint-small) {
+            font-size: 1.2rem;
+            margin-top: -3px;
+        }
     }
 
     .logo {
         width: 100px;
         height: 100px;
         margin-bottom: 10px;
+
+        @media (max-width: $breakpoint-small) {
+            width: 80px;
+            margin-bottom: 0;
+        }
     }
 
     .typewriter {
@@ -768,6 +762,40 @@ only show for tablet and up */
         .close-modal {
             transform: translateY(10px);
             opacity: 1;
+        }
+    }
+
+    &.navigation {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        -webkit-overflow-scrolling: touch;
+        border-radius: 0;
+        transform: scale(1.1);
+        padding: 0 !important;
+        z-index: 1000;
+        background: url("/wp-content/uploads/2019/02/cover-image-shorter.jpg") center no-repeat;
+        background-size: cover;
+        background-color: darken($gray, 10%);
+        background-blend-mode: multiply;
+
+        .modal-content {
+            padding: 0;
+        }
+
+        .main-navigation {
+            background: none;
+            -webkit-box-shadow: none;
+            -moz-box-shadow: none;
+            box-shadow: none;
+        }
+
+        .close-modal {
+            padding: 20px;
+            right: 20px !important;
+            top: 20px !important;
         }
     }
 }
