--- a/theme/scss/_custom.scss
+++ b/theme/scss/_custom.scss
@@ -615,6 +615,7 @@ $translateX: 0;
         background-position: center;
         background-repeat: no-repeat;
         margin-top: 0;
+        border-radius: 10px;
     }
 
     &.partea {
