added cabi to more projects/removed rad dads

--- a/theme/scss/_custom.scss
+++ b/theme/scss/_custom.scss
@@ -632,8 +632,8 @@ $translateX: 0;
         background-repeat: no-repeat;
     }
 
-    &.rad-dads {
-        background-image: url("/wp-content/uploads/2019/03/rad-dads-mock.jpg");
+    &.cabi {
+        background-image: url("/wp-content/uploads/2019/10/cabi-mock.jpg");
         background-size: contain;
         background-position: top center;
         background-repeat: no-repeat;
